# stat243_project

./: .gitignore  pyproject.toml  requirements.txt  run_example.py
GA/: fitness.py  select.py  selection.py
GA/testing/: test_crossover.py  test_fitness.py  test_mutation.py  test_population.py  test_select_driver.py  test_selection.py
GA/tests/: __init__.py  test_crossover.py  test_fitness.py  test_mutation.py  test_population.py  test_select_driver.py  test_selection.py
GA_Project/GA/: crossover.py  fitness.py  mutation.py  population.py  select.py
