[project]
name = "stat243-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask>=2025.11.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]
